[project]
name = "comfyui-spectrum-proper"
description = "Faithful FLUX-focused ComfyUI port of Spectrum spectral feature forecasting."
version = "0.1.7"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
Repository = "https://github.com/xmarre/ComfyUI-Spectrum-Proper"
Documentation = "https://github.com/xmarre/ComfyUI-Spectrum-Proper/wiki"
"Bug Tracker" = "https://github.com/xmarre/ComfyUI-Spectrum-Proper/issues"

[tool.comfy]
PublisherId = "xmarre"
DisplayName = "ComfyUI-Spectrum-Proper"
Icon = ""
includes = []
